--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Julia&#39;s Page by ryoia</title>
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
+    <script src="javascripts/home.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -17,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
-  <body>
+  <body ng-app="myPage" ng-controller="myPageCtrl">
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/ryoia/My-Page">View On GitHub</a></li>
@@ -38,11 +40,18 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <p>Julia's Page!</p>
+        <p>About me</p>
+	<table style="width:100%">
+	<tr><td>Abilities</td><td>Checked?</td></tr>
+	  <tr ng-repeat="(ability, check) in myAttr">
+	    <td>{{ability}}</td>
+	    <td>{{check}}</td>
+	  </tr>
+	</table>
       </section>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+   
   </body>
 </html>
